clusters/takeout/apps/games/space-engineers/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: space-engineers
  namespace: games
spec:
  selector:
    matchLabels:
      app: space-engineers
  serviceName: space-engineers
  replicas: 1 # active longhorn
  template:
    metadata:
      labels:
        app: space-engineers
    spec:
      containers:
      - name: space-engineers
        image: mmmaxwwwell/space-engineers-dedicated-docker-linux:latest
        # command: ["tail","-f","/dev/null"]
        ports:
        - containerPort: 27016
          name: game-data
          protocol: UDP
        volumeMounts:
        # - mountPath: "/dev/dri"
        #   name: dri
        - name: space-engineers-server-config
          mountPath: /appdata/space-engineers/SpaceEngineersDedicated/SpaceEngineers-Dedicated.cfg
          subPath: SpaceEngineers-Dedicated.cfg
        - name: space-engineers-data
          mountPath: /appdata/space-engineers
        - name: space-engineers-steam
          mountPath: /home/wine/.steam
        resources:
          limits:
            memory: 10Gi
          requests:
            cpu: 500m
      - name: filebrowser
        image: filebrowser/filebrowser:v2
        args: ["-d","/db/database.db"]
        ports:
        - containerPort: 80
          name: fb-http
          protocol: TCP
        volumeMounts:
        - name: space-engineers-data
          subPath: filebrowser
          mountPath: /db
        - name: space-engineers-data
          mountPath: /srv/space-engineers-data
        - name: space-engineers-steam
          mountPath: /srv/space-engineers-steam
      - name: space-engineers-files
        image: nginx
        volumeMounts:
        - name: space-engineers-data
          readOnly: true
          mountPath: /usr/share/nginx/html
        - mountPath: /etc/nginx/conf.d/
          name: space-engineers-files-config
        resources:
          requests:
            cpu: 50m
          limits:
            memory: 128Mi
        ports:
        - containerPort: 8080
      # nodeSelector:
      #   graphics: dri
      volumes:
        - name: dri
          persistentVolumeClaim:
            claimName: dri-pvc
        - name: space-engineers-files-config
          configMap:
              name: space-engineers-files-config
        - name: space-engineers-server-config
          secret:
            secretName: space-engineers-server-config
        - name: space-engineers-data
          persistentVolumeClaim:
            claimName: space-engineers-data
        - name: space-engineers-steam
          persistentVolumeClaim:
            claimName: space-engineers-steam
